Adapt notebook to the code

--- a/ReinforcementLearning/NHL/lines/Recommend Lines.ipynb
+++ b/ReinforcementLearning/NHL/lines/Recommend Lines.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -55,44 +55,44 @@
     "\n",
     "import numpy as np\n",
     "\n",
-    "from ReinforcementLearning.NHL.playbyplay.playbyplay_data import Season\n",
+    "from ReinforcementLearning.NHL.playbyplay.season import Season\n",
     "from ReinforcementLearning.NHL.player.player_type import PlayerType\n",
     "from ReinforcementLearning.NHL.lines.category import CategoryFetcher\n",
     "from ReinforcementLearning.NHL.lines.valuation import QValuesFetcherFromDict, QValuesFetcherFromGameData\n",
-    "from ReinforcementLearning.NHL.lines.recommender import LineRecommender\n"
+    "from ReinforcementLearning.NHL.lines.recommender import LineRecommender\n",
+    "from ReinforcementLearning.NHL.playbyplay.playbyplay_data import Game\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetched game 20361, played on 2013-03-10\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/luisd/dev/NHL_stats/ReinforcementLearning/NHL/playbyplay/season.py:41: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "/Users/luisd/dev/NHL_stats/ReinforcementLearning/NHL/playbyplay/season.py:44: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  ][self.games_info['teamAbbrev'] == home_team_abbr]\n"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'mtlott' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-bdd73f940209>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;31m# prediction of the lines that the 'away' team will use:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maway_lines\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmtlott\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_away_lines\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maccept_repeated\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;31m# === Now we get the indices in the Q-values tables corresponding to lines\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'mtlott' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fetched game 20388, played on 2013-03-13\n",
+      "INFO:tensorflow:Restoring parameters from /Users/luisd/dev/NHL_stats/ReinforcementLearning/NHL/playerstats/offVSdef/Automatic_classification/MODEL_perceptron_1layer_10units_relu/MODEL_perceptron_1layer_10units_relu\n",
+      "Q-table dimensions:  (3, 5, 10, 10)\n",
+      "[diff = 2, period = 0] First shift: \n",
+      "\thome team: DAVID DESHARNAIS, BRENDAN GALLAGHER, MAX PACIORETTY \n",
+      "\taway team: KYLE TURRIS, JAKOB SILFVERBERG, COLIN GREENING \n",
+      "\tQvalue: 3.17\n",
+      "Q value dictionary has 16 entries\n",
+      "Best fitness: 50.33 by formation [(1380, 389, 8), (9, 1035, 1164), (13, 14, 656), (281, 27, 31)]\n",
+      "Best fitness: 51.67 by formation [(1380, 389, 8), (9, 1035, 1164), (13, 14, 281), (656, 27, 31)]\n",
+      "=======> Took 0.29 secs. to look at 1 first-lines; I think we have around 62.76 secs. to go\n"
      ]
     }
    ],
@@ -101,18 +101,28 @@
     "\"\"\"Initialization\"\"\"\n",
     "db_root = '/Users/luisd/dev/NHL_stats/data'\n",
     "repoCode = '/Users/luisd/dev/NHL_stats'\n",
+    "\n",
     "repoModel = path.join(repoCode,\n",
     "                           'ReinforcementLearning/NHL/playerstats/offVSdef/Automatic_classification/MODEL_perceptron_1layer_10units_relu')\n",
     "\n",
-    "# Now lets get game data\n",
+    "\n",
     "season = Season(db_root=db_root, year_begin=2012, repo_model=repoModel)  # Season.from_year_begin(2012) # '20122013'\n",
-    "# Montreal received Ottawa on march 13, 2013, let's convert game date to game code\n",
-    "base_date=datetime.date(year=2013, month=3, day=13)\n",
+    "\n",
+    "# Now lets get game data\n",
+    "base_date = datetime.date(year=2013, month=3, day=13)\n",
     "result = season.get_game_at_or_just_before(game_date=base_date, home_team_abbr='MTL')\n",
-    "assert(result is not None)\n",
+    "assert (result is not None)\n",
     "gameId, d = result\n",
     "print(\"Fetched game %d, played on %s\" % (gameId, d))\n",
+    "mtlott = Game(season, gameId)\n",
     "\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "#\n",
+    "# # Montreal received Ottawa on march 13, 2013, let's convert game date to game code\n",
+    "# gameId = season.get_game_id(home_team_abbr='MTL', game_date=datetime.date(year=2013, month=3, day=13))\n",
+    "# mtlott = Game(season, gameId)\n",
     "\n",
     "# players_classes = mtlott.pull_players_classes_from_repo_address(True, True, 20, repoModel, number_of_games=30)\n",
     "\n",
@@ -193,7 +203,8 @@
     "        mtlott.rf_wc[mtlott.rf_wc['player.id'] == second_guy]['numfirstlast'].tolist()[0],\n",
     "        mtlott.rf_wc[mtlott.rf_wc['player.id'] == third_guy]['numfirstlast'].tolist()[0],\n",
     "    ))\n",
-    "    line_no += 1\n"
+    "    line_no += 1\n",
+    "\n"
    ]
   },
   {
