Notebook: get last away games' formations

--- a/ReinforcementLearning/NHL/lines/Recommend Lines.ipynb
+++ b/ReinforcementLearning/NHL/lines/Recommend Lines.ipynb
@@ -34,20 +34,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/luisd/sw/anaconda3/envs/nhl_stats/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: compiletime version 3.5 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.6\n",
-      "  return f(*args, **kwds)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pickle\n",
     "import datetime\n",
@@ -65,24 +56,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/luisd/dev/NHL_stats/ReinforcementLearning/NHL/playbyplay/season.py:44: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "  ][self.games_info['teamAbbrev'] == home_team_abbr]\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Fetched game 20388, played on 2013-03-13\n",
+      "INFO:tensorflow:Restoring parameters from /Users/luisd/dev/NHL_stats/ReinforcementLearning/NHL/playerstats/offVSdef/Automatic_classification/MODEL_perceptron_1layer_10units_relu/MODEL_perceptron_1layer_10units_relu\n",
+      "Processing game 20388\n",
+      "INFO:tensorflow:Restoring parameters from /Users/luisd/dev/NHL_stats/ReinforcementLearning/NHL/playerstats/offVSdef/Automatic_classification/MODEL_perceptron_1layer_10units_relu/MODEL_perceptron_1layer_10units_relu\n",
+      "Processing game 20335\n",
+      "INFO:tensorflow:Restoring parameters from /Users/luisd/dev/NHL_stats/ReinforcementLearning/NHL/playerstats/offVSdef/Automatic_classification/MODEL_perceptron_1layer_10units_relu/MODEL_perceptron_1layer_10units_relu\n",
+      "Processing game 20375\n",
+      "INFO:tensorflow:Restoring parameters from /Users/luisd/dev/NHL_stats/ReinforcementLearning/NHL/playerstats/offVSdef/Automatic_classification/MODEL_perceptron_1layer_10units_relu/MODEL_perceptron_1layer_10units_relu\n",
+      "Processing game 20312\n",
+      "INFO:tensorflow:Restoring parameters from /Users/luisd/dev/NHL_stats/ReinforcementLearning/NHL/playerstats/offVSdef/Automatic_classification/MODEL_perceptron_1layer_10units_relu/MODEL_perceptron_1layer_10units_relu\n",
+      "Processing game 20350\n",
       "INFO:tensorflow:Restoring parameters from /Users/luisd/dev/NHL_stats/ReinforcementLearning/NHL/playerstats/offVSdef/Automatic_classification/MODEL_perceptron_1layer_10units_relu/MODEL_perceptron_1layer_10units_relu\n",
       "Q-table dimensions:  (3, 5, 10, 10)\n",
       "[diff = 2, period = 0] First shift: \n",
@@ -90,9 +83,38 @@
       "\taway team: KYLE TURRIS, JAKOB SILFVERBERG, COLIN GREENING \n",
       "\tQvalue: 3.17\n",
       "Q value dictionary has 16 entries\n",
-      "Best fitness: 50.33 by formation [(1380, 389, 8), (9, 1035, 1164), (13, 14, 656), (281, 27, 31)]\n",
-      "Best fitness: 51.67 by formation [(1380, 389, 8), (9, 1035, 1164), (13, 14, 281), (656, 27, 31)]\n",
-      "=======> Took 0.29 secs. to look at 1 first-lines; I think we have around 62.76 secs. to go\n"
+      "Best fitness: 49.50 by formation \n",
+      "Line 1: 20 COLBY ARMSTRONG, 27 TRAVIS MOEN, 51 DAVID DESHARNAIS\n",
+      "Line 2: 81 LARS ELLER, 17 MICHAEL RYDER, 37 GABRIEL DUMONT\n",
+      "Line 3: 27 ALEX GALCHENYUK, 11 BRENDAN GALLAGHER, 12 BRIAN GIONTA\n",
+      "Line 4: 25 RYAN WHITE, 67 MAX PACIORETTY, 14 TOMAS PLEKANEC\n",
+      "Best fitness: 49.77 by formation \n",
+      "Line 1: 20 COLBY ARMSTRONG, 27 TRAVIS MOEN, 51 DAVID DESHARNAIS\n",
+      "Line 2: 81 LARS ELLER, 17 MICHAEL RYDER, 37 GABRIEL DUMONT\n",
+      "Line 3: 12 BRIAN GIONTA, 67 MAX PACIORETTY, 14 TOMAS PLEKANEC\n",
+      "Line 4: 25 RYAN WHITE, 27 ALEX GALCHENYUK, 11 BRENDAN GALLAGHER\n",
+      "Best fitness: 49.86 by formation \n",
+      "Line 1: 20 COLBY ARMSTRONG, 27 TRAVIS MOEN, 51 DAVID DESHARNAIS\n",
+      "Line 2: 81 LARS ELLER, 17 MICHAEL RYDER, 12 BRIAN GIONTA\n",
+      "Line 3: 37 GABRIEL DUMONT, 27 ALEX GALCHENYUK, 11 BRENDAN GALLAGHER\n",
+      "Line 4: 25 RYAN WHITE, 67 MAX PACIORETTY, 14 TOMAS PLEKANEC\n",
+      "Best fitness: 50.28 by formation \n",
+      "Line 1: 20 COLBY ARMSTRONG, 27 TRAVIS MOEN, 51 DAVID DESHARNAIS\n",
+      "Line 2: 81 LARS ELLER, 37 GABRIEL DUMONT, 12 BRIAN GIONTA\n",
+      "Line 3: 17 MICHAEL RYDER, 67 MAX PACIORETTY, 14 TOMAS PLEKANEC\n",
+      "Line 4: 25 RYAN WHITE, 27 ALEX GALCHENYUK, 11 BRENDAN GALLAGHER\n",
+      "=======> Took 0.31 secs. to look at 1 first-lines; I think we have around 67.24 secs. to go\n",
+      "ALL DONE!!!!!!\n",
+      "================================\n",
+      "Best fitness: 50.28 by formation \n",
+      "[(1380, 389, 8), (9, 1164, 656), (1035, 27, 31), (281, 13, 14)], to play against \n",
+      "[(0, 2, 2), (0, 0, 0), (0, 1, 2), (1, 2, 2)]\n",
+      "================================\n",
+      "[(1380, 389, 8), (9, 1164, 656), (1035, 27, 31), (281, 13, 14)]\n",
+      "Line 1: 20 COLBY ARMSTRONG, 27 TRAVIS MOEN, 51 DAVID DESHARNAIS\n",
+      "Line 2: 81 LARS ELLER, 37 GABRIEL DUMONT, 12 BRIAN GIONTA\n",
+      "Line 3: 17 MICHAEL RYDER, 67 MAX PACIORETTY, 14 TOMAS PLEKANEC\n",
+      "Line 4: 25 RYAN WHITE, 27 ALEX GALCHENYUK, 11 BRENDAN GALLAGHER\n"
      ]
     }
    ],
@@ -106,7 +128,7 @@
     "                           'ReinforcementLearning/NHL/playerstats/offVSdef/Automatic_classification/MODEL_perceptron_1layer_10units_relu')\n",
     "\n",
     "\n",
-    "season = Season(db_root=db_root, year_begin=2012, repo_model=repoModel)  # Season.from_year_begin(2012) # '20122013'\n",
+    "season = Season(db_root=db_root, year_begin=2012, repo_model=repoModel)\n",
     "\n",
     "# Now lets get game data\n",
     "base_date = datetime.date(year=2013, month=3, day=13)\n",
@@ -114,20 +136,27 @@
     "assert (result is not None)\n",
     "gameId, d = result\n",
     "print(\"Fetched game %d, played on %s\" % (gameId, d))\n",
-    "mtlott = Game(season, gameId)\n",
-    "\n",
-    "#\n",
-    "#\n",
-    "#\n",
-    "#\n",
-    "# # Montreal received Ottawa on march 13, 2013, let's convert game date to game code\n",
-    "# gameId = season.get_game_id(home_team_abbr='MTL', game_date=datetime.date(year=2013, month=3, day=13))\n",
-    "# mtlott = Game(season, gameId)\n",
-    "\n",
-    "# players_classes = mtlott.pull_players_classes_from_repo_address(True, True, 20, repoModel, number_of_games=30)\n",
+    "data_for_a_game = Game(season, gameId)\n",
     "\n",
     "# prediction of the lines that the 'away' team will use:\n",
-    "df, away_lines = mtlott.get_away_lines(accept_repeated=True)\n",
+    "num_games_back = 5\n",
+    "ids = season.get_last_n_away_games_since(base_date, n=num_games_back, team_abbrev=data_for_a_game.away_team)\n",
+    "lines_dict = {}\n",
+    "for game_id in ids:\n",
+    "    print(\"Processing game %d\" % (game_id))\n",
+    "    g = Game(season, gameId=game_id)\n",
+    "    result_as_list = g.get_away_lines()\n",
+    "    for line_as_ids, line_as_types, secs_played in result_as_list:\n",
+    "        if line_as_ids in lines_dict:\n",
+    "            # update number of seconds played\n",
+    "            lines_dict[line_as_ids] = (line_as_types, lines_dict[line_as_ids][1] + secs_played)\n",
+    "        else:\n",
+    "            # seed entry in dictionary\n",
+    "            lines_dict[line_as_ids] = (line_as_types, secs_played)\n",
+    "# ok, now sort by seconds played, keep top 4:\n",
+    "flat_list = list(map(lambda x: (x[0], x[1][0], x[1][1]), lines_dict.items()))\n",
+    "result_as_list = sorted(flat_list, key=lambda x: x[2], reverse=True)[:4]\n",
+    "away_lines = list(map(lambda x: x[1], result_as_list)) # as categories\n",
     "\n",
     "# === Now we get the indices in the Q-values tables corresponding to lines\n",
     "\n",
@@ -137,8 +166,8 @@
     "linedict  = linedict.line_dictionary\n",
     "\n",
     "# Get lines and translate them\n",
-    "playersCode  =   mtlott.encode_line_players()\n",
-    "linesCode    =   np.array( [[mtlott.recode_line(linedict, a) for a in b] for b in playersCode] )\n",
+    "playersCode  =   data_for_a_game.encode_line_players()\n",
+    "linesCode    =   np.array( [[data_for_a_game.recode_line(linedict, a) for a in b] for b in playersCode] )\n",
     "\n",
     "\n",
     "# Load the Qvalues table\n",
@@ -151,14 +180,14 @@
     "\n",
     "# Get the Q-value for that specific line\n",
     "iShift = 0  # First shift\n",
-    "lineShifts = mtlott.lineShifts.as_df(team='both', equal_strength=mtlott.shifts_equal_strength,\n",
-    "                                   regular_time=mtlott.shifts_regular_time, min_duration=20)\n",
+    "lineShifts = data_for_a_game.lineShifts.as_df(team='both', equal_strength=data_for_a_game.shifts_equal_strength,\n",
+    "                                   regular_time=data_for_a_game.shifts_regular_time, min_duration=20)\n",
     "\n",
-    "player_classes = mtlott.players_classes_mgr.get(equal_strength=True, regular_time=True, min_duration=20, nGames=30) # TODO: why these parameters?\n",
+    "player_classes = data_for_a_game.players_classes_mgr.get(equal_strength=True, regular_time=True, min_duration=20, nGames=30) # TODO: why these parameters?\n",
     "plList = list(player_classes.loc[lineShifts['playersID'].iloc[iShift][0]]['firstlast'].values) + \\\n",
     "         list(player_classes.loc[lineShifts['playersID'].iloc[iShift][1]]['firstlast'].values)\n",
-    "diff = mtlott.recode_differential(lineShifts.iloc[iShift].differential)\n",
-    "period = mtlott.recode_period(lineShifts.iloc[iShift].period)\n",
+    "diff = data_for_a_game.recode_differential(lineShifts.iloc[iShift].differential)\n",
+    "period = data_for_a_game.recode_period(lineShifts.iloc[iShift].period)\n",
     "q_values = Qvalues[period, diff, linesCode[iShift, 0], linesCode[iShift, 1]]\n",
     "print('[diff = %d, period = %d] First shift: \\n\\thome team: %s, %s, %s \\n\\taway team: %s, %s, %s \\n\\tQvalue: %.2f' % (\n",
     "diff, period, plList[0], plList[1], plList[2], plList[3], plList[4], plList[5], q_values))\n",
@@ -180,31 +209,20 @@
     "    1),\n",
     "]\n",
     "\n",
-    "q_values_fetcher_from_game_data = QValuesFetcherFromGameData(game_data=mtlott, lines_dict=linedict, q_values=Qvalues)\n",
+    "q_values_fetcher_from_game_data = QValuesFetcherFromGameData(game_data=data_for_a_game, lines_dict=linedict, q_values=Qvalues)\n",
     "q_values_fetcher_from_tuples = QValuesFetcherFromDict.from_tuples(q_value_tuples)\n",
     "\n",
     "line_rec = LineRecommender(\n",
-    "    player_category_fetcher=CategoryFetcher(data_for_game=mtlott),\n",
+    "    game=data_for_a_game,\n",
+    "    player_category_fetcher=CategoryFetcher(data_for_game=data_for_a_game),\n",
     "    q_values_fetcher=q_values_fetcher_from_game_data) # q_values_fetcher_from_tuples)\n",
     "\n",
     "home_lines_rec = line_rec.recommend_lines_maximize_average(\n",
-    "                                home_team_players_ids=mtlott.get_home_players(repoModel),\n",
+    "                                home_team_players_ids=data_for_a_game.get_ids_of_home_players(),\n",
     "                                away_team_lines = away_lines, examine_max_first_lines=None)\n",
     "print(home_lines_rec)\n",
     "\n",
-    "# let's translate these numbers into names:\n",
-    "# input is ~ [(656, 27, 31), (1380, 389, 1035), (8, 9, 1164), (281, 13, 14)]\n",
-    "line_no = 1\n",
-    "for a_line in home_lines_rec:\n",
-    "    first_guy, second_guy, third_guy = a_line\n",
-    "    print(\"Line %d: %s, %s, %s\" % (\n",
-    "        line_no,\n",
-    "        mtlott.rf_wc[mtlott.rf_wc['player.id'] == first_guy]['numfirstlast'].tolist()[0],\n",
-    "        mtlott.rf_wc[mtlott.rf_wc['player.id'] == second_guy]['numfirstlast'].tolist()[0],\n",
-    "        mtlott.rf_wc[mtlott.rf_wc['player.id'] == third_guy]['numfirstlast'].tolist()[0],\n",
-    "    ))\n",
-    "    line_no += 1\n",
-    "\n"
+    "print(data_for_a_game.formation_ids_to_str(home_lines_rec))\n"
    ]
   },
   {
